crates/bsql/tests/compile_fail/delete_without_where.rs
fn main() {
    let _ = bsql::query!("DELETE FROM users");
}
