crates/bsql/tests/compile_fail/delete_without_where.stderr
error: DELETE without WHERE clause will affect every row in the table. Add a WHERE clause, or use `WHERE true` if this is intentional.
 --> tests/compile_fail/delete_without_where.rs:2:13
  |
2 |     let _ = bsql::query!("DELETE FROM users");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
